<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.recipes.RecipesFragment">

            <TextView
                android:id="@+id/title_text_view"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/posterImageView"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Title" />

            <ImageView
                android:id="@+id/posterImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/poster_details_height"
                android:contentDescription="@string/poster"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/description_text_view"
                style="@style/DescriptionStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_text_view"
                app:layout_constraintVertical_bias="0.0"
                tools:text="dsf;l,akm poiejopiwej oiwej roijerwg foiewj rfoiwhefoiwhowoeh owihe oiweh iwh wgihvoavhlkasvllakejrloajw" />

            <TextView
                android:id="@+id/date_text_view"
                style="@style/DescriptionStyle"
                android:text="@string/ingredients_label"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text_view"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/label_ingredients"
                style="@style/TitleStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/ingredients_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_text_view"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/ingridients_text_view"
                style="@style/DescriptionStyle"
                android:text="@string/ingredients_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_ingredients"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/label"
                style="@style/TitleStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/steps_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingridients_text_view"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/steps_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label"
                app:layout_constraintVertical_bias="0.0" />

            <com.rishabhharit.roundedimageview.RoundedImageView
                android:id="@+id/user_avatar_image"
                android:layout_width="@dimen/recipe_avatar_size"
                android:layout_height="@dimen/recipe_avatar_size"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:cornerRadius="@dimen/recipe_avatar_radius"
                app:layout_constraintBottom_toTopOf="@+id/title_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/posterImageView"
                app:layout_constraintVertical_bias="1.0"
                app:roundedCorners="all"
                tools:src="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>